--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </p>
 
                 <div class="flex flex-col items-start w-full fade-in-up delay-700 opacity-0">
-                    <a href="https://n979851.yclients.com/company/910008/personal/menu?o=" class="group relative w-auto cursor-pointer overflow-hidden rounded-full border border-primary/10 bg-white p-3 px-8 text-center font-semibold shadow-lg shadow-black/5 block">
+                    <a href="https://wa.me/79773480770" class="group relative w-auto cursor-pointer overflow-hidden rounded-full border border-primary/10 bg-white p-3 px-8 text-center font-semibold shadow-lg shadow-black/5 block">
                         <span class="inline-block transition-all duration-300 group-hover:translate-x-12 group-hover:opacity-0 text-primary">
                             Записаться на консультацию
                         </span>
@@ -508,6 +508,13 @@
             </div>
         </div>
     </section>
+    
+    <!-- Legal Notice -->
+    <div class="bg-background py-6 px-layout-px text-center">
+        <p class="text-[10px] text-tertiary font-medium tracking-wide opacity-70">
+            * Meta Platforms Inc. (владелец Facebook и Instagram) признана экстремистской организацией, её деятельность запрещена на территории РФ.
+        </p>
+    </div>
 
     <!-- Modal -->
     <div id="modal" class="fixed inset-0 z-[100] hidden items-center justify-center p-4 sm:p-6"><div id="modal-overlay" class="absolute inset-0 bg-black/60 backdrop-blur-md opacity-0" onclick="closeModal()"></div><div id="modal-content" class="relative w-full max-w-[600px] bg-white rounded-[32px] shadow-2xl max-h-[90vh] overflow-y-auto opacity-0 scale-95 p-8 md:p-10"><button onclick="closeModal()" class="absolute top-6 right-6 p-2 rounded-full hover:bg-gray-100 transition-colors z-10"><span class="material-symbols-rounded">close</span></button><div id="modal-body" class="mb-0"></div></div></div>
