--- a/ONA_Multilink.html
+++ b/ONA_Multilink.html
@@ -206,7 +206,11 @@
             <div class="flex flex-col gap-1 mb-4">
                 <span class="text-[13px] font-bold uppercase tracking-widest text-tertiary">Наш адрес</span>
                 <span class="text-[16px] text-primary">Москва, Большая почтовая 71</span>
-                <a href="https://maps.google.com" class="text-[13px] text-accent hover:text-primary transition-colors border-b border-transparent hover:border-primary w-max mx-auto pb-0.5">Показать на карте</a>
+                <!-- Updated map links container -->
+                <div class="flex gap-4 justify-center mt-1">
+                     <a href="https://yandex.kz/maps/-/CLHiyBjK" target="_blank" class="text-[13px] text-accent hover:text-primary transition-colors border-b border-transparent hover:border-primary pb-0.5">Яндекс.Карты</a>
+                     <a href="https://go.2gis.com/IF8m2" target="_blank" class="text-[13px] text-accent hover:text-primary transition-colors border-b border-transparent hover:border-primary pb-0.5">2ГИС</a>
+                </div>
             </div>
 
             <div class="flex flex-col gap-1 mb-6">
