--- a/index.html
+++ b/index.html
@@ -500,7 +500,14 @@
                         
                         <div class="flex flex-col md:flex-row justify-between items-start md:items-end pt-8 border-t border-gray-100">
                             <div><span class="block text-sm text-tertiary mb-1">График работы</span><span class="text-lg text-primary">Ежедневно 10:00–21:00</span></div>
-                            <button class="mt-4 md:mt-0 flex items-center gap-2 text-accent hover:text-primary transition-colors border-b border-transparent hover:border-primary pb-1"><span>Посмотреть на карте</span><span class="material-symbols-rounded text-sm">arrow_outward</span></button>
+                            <div class="flex flex-col sm:flex-row gap-4 mt-4 md:mt-0">
+                                <a href="https://go.2gis.com/IF8m2" target="_blank" class="flex items-center gap-2 text-accent hover:text-primary transition-colors border-b border-transparent hover:border-primary pb-1">
+                                    <span>2GIS</span><span class="material-symbols-rounded text-sm">arrow_outward</span>
+                                </a>
+                                <a href="https://yandex.kz/maps/-/CLHiyBjK" target="_blank" class="flex items-center gap-2 text-accent hover:text-primary transition-colors border-b border-transparent hover:border-primary pb-1">
+                                    <span>Яндекс Карты</span><span class="material-symbols-rounded text-sm">arrow_outward</span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
